--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,13 @@
 {
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "build/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index.js" }
+  "routes": [
+    { 
+      "sec": "/", 
+    "dest": "/" 
+  },
+  {
+    
+    "sec": "/test", 
+    "dest": "/" 
+  }
   ]
 }
