--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { 
-      "sec": "/", 
-    "dest": "/" 
-  },
-  {
-    
-    "sec": "/test", 
-    "dest": "/" 
-  }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
   ]
 }
